[workspace]
resolver = "2"

members = [
	"eventqueuefixfix",
]

[workspace.package]
version = "1.0.1"
edition = "2024"
homepage = "https://github.com/srcwr/eventqueuefixfix"
repository = "https://github.com/srcwr/eventqueuefixfix"

[workspace.dependencies]
extshared = { path = "../srcwrtimer/extshared" }
extshared_build_helper = { path = "../srcwrtimer/extshared_build_helper" }

[profile.release]
lto = true
incremental = false
