[package]
name = "eventqueuefixfix"
authors = ["rtldg <rtldg@protonmail.com>"]
description = "eventqueuefix needs a little help on Windows!"
license = "GPL-3.0-or-later"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[build-dependencies]
extshared_build_helper.workspace = true

[dependencies]
extshared.workspace = true
